# shadertool

./: .gitmodules  CMakeLists.txt
include/: Shader.hpp  Texture2D.hpp
shaders/: default.vert  elemental-ring.frag  seascape.frag  shader.frag  shader.vert  smoke-noise.frag  worley-perlin-noise.frag
src/: Shader.cpp  Texture2D.cpp  main.cpp
